tests/NormalTests/paczka2/big_fuzzy/48296585.err
Error in line 14: rqLhH60xD!e S360 97,9
Error in line 18: oVG A720 48,2
Error in line 16: m1lGhDY7T A119 60,2
Error in line 20: oVG A119 95,0
Error in line 30: oVG A119 25,9
Error in line 42: ivybeEg A199 32,9
Error in line 44: oVG A720 98,8
Error in line 53: jfbpWWLzrN A720 38,5
Error in line 56: jfbpWWLzrN S360 12,55
Error in line 17: rqLhH60xDRe S360 406,3
Error in line 55: jfbpWWLzrN S360 92,5
Error in line 63: jfbpWWLzrN A720 0,1
Error in line 69: jfbpWWLzrN S360 67,2
Error in line 76: jfbpWWLzrN A720 231,3
Error in line 77: jfbpWWLzrN A119 24,5
Error in line 82: m1lGhDY7T S360 68,9
Error in line 86: rqLhH60xDRe A720 6,8
Error in line 121: S360 A119 18,7
Error in line 128: ivybeEg A720 -1,8
Error in line 137: SaSF3RLJ A119 99,8
Error in line 147: S360 A199 17,3
Error in line 165: S360 A199 7,3
Error in line 151: ivybeEg A720 87,6
Error in line 164: jfbpWWLzrN A720 80,0
Error in line 182: rqLhH60xDRe A119 63,5
Error in line 192: jfbpWWLzrN S360 33,2
Error in line 205: S360 A720 14,38
Error in line 197: S360 A720 19,2
Error in line 211: jfbpWWLzrN S360 96,0
Error in line 208: S360 S360 48,4
Error in line 196: m1lGhDY7T A199 215,7
Error in line 184: rqLhH60xDRe A199 72,7
Error in line 227: SaSF3RLJ A119 17,8
Error in line 226: rqLhH60xDRe A119 53,3
Error in line 242: SaSF3RLJ A720 295,3
